--- a/assets/css/post.scss
+++ b/assets/css/post.scss
@@ -51,9 +51,9 @@
   }
 
   &-cover {
-    margin: 40px -50px;
+    /*margin: 40px -50px;
     width: 860px;
-    max-width: 860px;
+    max-width: 860px;*/
 
     img {
       margin: 0 auto;
